improved file viewer, added a status and message bar, allowed users to edit the file, [REFACTORED, COUNT=2]

--- a/TODO
+++ b/TODO
@@ -1,4 +1,9 @@
-[]  Improve the file viewer so that the user can scroll through and view the whole file
-[]  Allow user to insert and edit the file
+[X]  Improve the file viewer so that the user can scroll through and view the whole file
+[X]  Add a status and message bar
+[X]  Allow user to insert text and edit the file
+[]  Add a search feature
 []  Add syntax highlighting
 []  Make a proper project directory structure with folders and everything
+
+
+[2] Refactored Code  [Note: over here i will type in the number of times I refactored my code]
